<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.shashankkalra.portfolioapp.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="#e0f2f1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NANODEGREE_APPS_STRING"
        android:textSize="25sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAlignment="center"
        android:id="@+id/textView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="#090b43" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SPOTIFY_STREAMER_APP"
        android:id="@+id/spotify_streamer"
        android:height="50sp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:width="300sp"
        android:layout_marginTop="30sp"
        android:backgroundTint="#80cbc4"
        android:onClick="launchApp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FOOTBALL_SCORES_APP"
        android:id="@+id/football_scores"
        android:layout_below="@+id/spotify_streamer"
        android:layout_centerHorizontal="true"
        android:height="50sp"
        android:width="300sp"
        android:backgroundTint="#80cbc4"
        android:onClick="launchApp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LIBRARY_APP"
        android:id="@+id/library"
        android:height="50sp"
        android:width="300sp"
        android:layout_below="@+id/football_scores"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#80cbc4"
        android:onClick="launchApp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BUILD_IT_BIGGER"
        android:id="@+id/build_bigger"
        android:layout_below="@+id/library"
        android:layout_centerHorizontal="true"
        android:height="50sp"
        android:width="300sp"
        android:backgroundTint="#80cbc4"
        android:onClick="launchApp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/XYZ_Reader_APP"
        android:id="@+id/xyz_reader"
        android:height="50sp"
        android:width="300sp"
        android:layout_below="@+id/build_bigger"
        android:layout_alignLeft="@+id/build_bigger"
        android:layout_alignStart="@+id/build_bigger"
        android:backgroundTint="#80cbc4"
        android:onClick="launchApp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CAPSTONE_APP"
        android:id="@+id/capstone"
        android:layout_below="@+id/xyz_reader"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:height="70sp"
        android:width="300sp"
        android:backgroundTint="#303f9f"
        android:onClick="launchApp"
        android:textColor="#ffffff" />
</RelativeLayout>
